# dvc-objects

./: .cookiecutter.json  .cruft.json  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: release.yml  tests.yml
src/dvc_objects/: __init__.py  _tqdm.py  checkout.py  db.py  executors.py  file.py  meta.py  obj.py  stage.py  transfer.py
src/dvc_objects/db/: base.py  local.py
src/dvc_objects/fs/: __init__.py  _local.py  base.py  callbacks.py  errors.py  fastcopy.py  generic.py  local.py  memory.py  path.py  plugin.py  system.py  utils.py
src/dvc_objects/fs/implementations/: _memory.py  gdrive.py  gs.py  http.py  memory.py  oss.py  s3.py  ssh.py  webdav.py
src/dvc_objects/fs/implementations/http/: __init__.py
src/dvc_objects/hashfile/: db.py  hash.py  obj.py
tests/: __init__.py  conftest.py  test_cache.py  test_dvc_objects.py  test_hash.py  test_hash_stream.py  test_istextfile.py  test_odb.py  test_reflink.py  test_transfer.py  test_tree.py  test_utils.py
tests/benchmarks/: test_copy.py  test_fs.py
tests/db/: test_local.py
tests/fs/: test_callbacks.py  test_generic.py  test_localfs.py  test_memfs.py  test_strip_unstrip.py  test_system.py  test_utils.py
tests/hashfile/: test_cache.py  test_hash.py  test_hash_stream.py  test_istextfile.py  test_utils.py
