[metadata]
description = dvc objects
name = dvc-objects
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_file = LICENSE
url = https://github.com/iterative/dvc-objects
platforms=any
authors = Iterative
maintainer_email = support@dvc.org
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta

[options]
python_requires = >=3.8
zip_safe = False
package_dir=
    =src
packages = find:
install_requires=
    tqdm>=4.63.1,<5
    shortuuid>=0.5.0
    flatten_dict>=0.4.1,<1
    funcy>=1.14
    fsspec>=2021.10.1
    typing-extensions>=3.7.4
    pygtrie>=2.3.2

[options.extras_require]
tests =
    pytest==7.1.2
    pytest-sugar==0.9.4
    pytest-cov==3.0.0
    pytest-mock==3.8.2
    pylint==2.14.4
    mypy==0.961
    pytest-servers[s3]==0.0.3

all =
    %(azure)s
    %(gdrive)s
    %(gs)s
    %(hdfs)s
    %(http)s
    %(oss)s
    %(s3)s
    %(ssh)s
    %(webdav)s
azure =
    adlfs>=2021.10.0
    azure-identity>=1.4.0
    knack
gdrive = pydrive2[fsspec]>=1.10.1
gs = gcsfs>=2021.11.1
hdfs =
    # due to https://github.com/python-poetry/poetry/issues/4683, we have to
    # explicitly specify pyarrow here
    pyarrow>=1; implementation_name=='cpython'
    fsspec[arrow]; implementation_name=='cpython'
http =
    aiohttp-retry>=2.4.5
oss = ossfs>=2021.8.0
s3 =
    s3fs[boto3]>=2022.02.0
    aiobotocore[boto3]>2
ssh =
    # due to https://github.com/python-poetry/poetry/issues/4683, we have to
    # explicitly specify bcrypt here
    bcrypt
    sshfs[bcrypt]>=2021.11.2
webdav = webdav4>=0.9.3
# not to break `dvc[webhdfs]`
webhdfs =
dev =
    %(tests)s
    %(all)s

[options.packages.find]
exclude =
    tests
    tests.*
where=src

[flake8]
ignore=
    E203, # Whitespace before ':'
    E266, # Too many leading '#' for block comment
    W503, # Line break occurred before a binary operator
    P1,  # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
max_line_length = 79
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
