[metadata]
description = dvc objects
name = dvc-objects
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_file = LICENSE
url = https://github.com/iterative/dvc-objects
platforms=any
authors = Iterative
maintainer_email = support@dvc.org
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 4 - Beta

[options]
python_requires = >=3.8
zip_safe = False
package_dir=
    =src
packages = find:
install_requires=
    tqdm>=4.63.1,<5
    shortuuid>=0.5.0
    funcy>=1.14
    fsspec>=2022.10.0
    typing-extensions>=3.7.4

[options.extras_require]
tests =
    pytest==7.2.0
    pytest-sugar==0.9.6
    pytest-cov==4.0.0
    pytest-mock==3.8.2
    pylint==2.15.0
    mypy==0.971
    pytest-servers[s3]==0.1.3
dev =
    %(tests)s

[options.packages.find]
exclude =
    tests
    tests.*
where=src

[options.package_data]
dvc_objects = py.typed

[flake8]
ignore=
    # Whitespace before ':'
    E203
    # Too many leading '#' for block comment
    E266
    # Line break occurred before a binary operator
    W503
    # unindexed parameters in the str.format, see:
    # https://pypi.org/project/flake8-string-format/
    P1
max_line_length = 88
max-complexity = 15
select = B,C,E,F,W,T4,B902,T,P
show_source = true
count = true
